# whisper.cpp-build

./: .gitignore  CMakeLists.txt  README.md  whisper_abi.cpp  whisper_abi.h
.github/workflows/: build.yml
cmake/: FetchContentMakeAvaliable.cmake  dr_libs.cmake  whisper.cmake
